# Bible.QnA

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  pyproject.toml
BibleQandAWebsite/: .dockerignore  db.sqlite3  entrypoint.prod.sh  manage.py  requirements.txt
BibleQandAWebsite/api/: models.py  permissions.py  serializers.py  urls.py  views.py
BibleQandAWebsite/api/management/commands/: cleanup_expired_keys.py
BibleQandAWebsite/bibleqanda/: asgi.py  settings.py  urls.py  wsgi.py
BibleQandAWebsite/bibleqanda/settings/: __init__.py  base.py  local.py  production.py
BibleQandAWebsite/cronjob/: urls.py  views.py
BibleQandAWebsite/form/: admin.py  context_processor.py  forms.py  models.py  services.py  urls.py  views.py
BibleQandAWebsite/form/templates/form/: base.html  home.html  question.html  questionThanks.html  test.html  testimony.html  testimonyThanks.html
BibleQandAWebsite/form/utils/: encryption.py  votd.py
BibleQandAWebsite/leaders/: auth.py  decorators.py  forms.py  services.py  urls.py  views.py
BibleQandAWebsite/leaders/management/commands/: dump_to_fixture.py  load_fixture.py
BibleQandAWebsite/leaders/templates/leaders/: base.html  upload-spotify.html
BibleQandAWebsite/linktree/: urls.py  views.py
BibleQandAWebsite/linktree/templates/linktree/: index.html
BibleQandAWebsite/register/: urls.py  views.py
BibleQandAWebsite/register/templates/registration/: login.html  logout.html  (+7 more)
scripts/: start-pt1.sh  start-pt2.sh  upload_static.sh
traefik/: traefik.yml  traefik_cache_dynamic.yml  traefik_dynamic.yml
(+13 files in other folders)
