[project]
name = "bibleqandawebsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crispy-bootstrap5>=2025.4",
    "django>=5.2",
    "django-extensions>=4.1",
    "gspread>=6.2.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.0",
]
prod = [
    "gunicorn>=23.0.0",
    "whitenoise>=6.9.0",
]
